# fdr4vgt_opencl

./: README.md  c3s_io.py  launch.bash  old.pyproject.toml  pyproject.toml  render_docx.sh  test_all_files.json
ANCILLARY/: Aerosol_model_fraction.txt  cf_attributes_res2.json  kg_zoneNumGueymard.csv  model.onnx  model.onnx.data
docs/: ATBD_v1.0_comparison.md  OPTIMIZED_BRANCH_REPORT.md  PERFORMANCE_PLAN.md
fdr4vgt/: CF_from_json.py  funcs.py  in_out.py  probav_config.cfg  probav_vito.py  process.py  spotvgt1_config.cfg  spotvgt_vito.py
quarto/: _quarto.yml  atbd.qmd  atbd_extended.html  atbd_extended.qmd  atbd_extended.quarto_ipynb_2  beamer.qmd  pdf.qmd
quarto/_extensions/copernicus/: _extension.yml
quarto/_extensions/copernicus/css/: copernicus-docs.css
quarto/_extensions/copernicus/filters/: copernicus-docx.lua
quarto/_extensions/copernicus/resources/templates/: copernicus-reference.docx
quarto/_extensions/hygeos/: _extension.yml  utils.py
quarto/_extensions/hygeos/css/: hygeos.css
quarto/_extensions/hygeos/resources/templates/: beamerthemeHYGEOS.sty  hygeos-template.tex  template_PowerPoint_HYGEOS_v2.1.pptx
quarto/atbd_extended_files/libs/bootstrap/: bootstrap-b089910ab86b64b2bbb4eaf482c73dc6.min.css
quarto/media/media/: image2.emf  image27.emf
quarto/templates/: template_document.qmd  template_document_copernicus.html  template_document_copernicus.qmd  template_document_copernicus_formats.html  template_document_copernicus_formats.qmd  template_presentation.qmd
quarto/templates/template_document_copernicus_files/libs/bootstrap/: bootstrap-16833fa4385319ffc9a546a1553caa79.min.css
scripts/: fix_docx_equations.py  test_dem_smoothing_xdem.py
tests/: all_process_probav_1.cfg  all_process_probav_1_fixed.cfg  all_process_probav_2.cfg  all_process_probav_2_fixed.cfg  all_process_probav_3.cfg  all_process_probav_3_fixed.cfg  all_process_spotvgt1_1.cfg  all_process_spotvgt1_1_fixed.cfg  all_process_spotvgt1_2.cfg  all_process_spotvgt1_2_fixed.cfg  all_process_spotvgt1_3.cfg  all_process_spotvgt1_3_fixed.cfg  all_process_spotvgt1_4.cfg  all_process_spotvgt1_4_fixed.cfg  probav_native_robust_k3_q98_full.cfg  probav_native_robust_k3_q98_full_morph.cfg  spotvgt1_baseline.cfg  spotvgt1_fulltest.cfg  spotvgt1_fulltest_morph.cfg  spotvgt1_improved.cfg  spotvgt1_interp_robust.cfg  spotvgt1_native_fixed.cfg
