[project]
name = "fdr4vgt_opencl"
version = "0.1.0"
description = ""
requires-python = ">= 3.10"
authors = [{name = "HYGEOS", email = "contact@hygeos.com"}]
dependencies = [
    "xarray",
    "ipykernel",
    "numpy",
    "matplotlib",
    "netcdf4",
    "dask",
    "vulture",
    "core @ git+https://github.com/hygeos/core.git#a51bc9dbe7f74fe1e280d21571e8018dc65abb6b",
    "smaccl @ git+https://github.com/hygeos/smaccl.git@opencl",
]

[project.optional-dependencies]
git = [
    # insert github dependencies
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {}}

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
fdr4vgt_opencl = { path = ".", editable = true, extras = ["git"] }

[tool.pixi.tasks]
tests = "pytest tests/"


[tool.pixi.dependencies]
ipykernel = "*"
pytest = "*"
pytest-html = "*"
matplotlib-base = "*"
pytest-xdist = "*"
vulture = "*"
xarray = "*"
numpy = ">=2"
matplotlib = "*"
dask = "*"
netcdf4 = "*"
pyopencl = "*"
pocl = "*"
jax = "*"
psutil = "*"
xdem = "0.1.5.*"
config = "*"
ONNXRuntime = "*"
zarr = "*"

[tool.pixi.environments]
default = { features = ['sys', 'sub', 'dev'], solve-group = "default" }

[tool.pixi.feature.sys.dependencies]

[tool.pixi.feature.dev.dependencies]

[tool.pixi.feature.sub.dependencies]
